k3s/apps/mfw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mfw-srv
  namespace: default
  labels:
    app.kubernetes.io/name: mfw-srv
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mfw-srv
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
