k3s/apps/mfw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mfw-srv
  namespace: default
  labels:
    app.kubernetes.io/name: mfw-srv
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - "mfw.ddns.net"
      secretName: mfw-srv-tls-cert
  rules:
    - host: "mfw.ddns.net"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: mfw-srv
                port:
                  number: 3000
